fixed spacing

--- a/components/user-view/shopping-cart/shopping-cart.module.css
+++ b/components/user-view/shopping-cart/shopping-cart.module.css
@@ -1,6 +1,6 @@
 .cart {
     height: 300px;
-    width: 200px;
+    width: 300px;
     background-color: #2f3135;
     position: absolute;
     top: 3rem;
@@ -14,7 +14,7 @@
     width: 100%;
     position: relative;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
 }
 
 .header {
@@ -22,17 +22,20 @@
    display: flex;
    justify-content: space-between;
    padding: 0 1.2rem 0 1rem;
+   margin: 0;
 }
 
 .cart-quantity {
     font-family: "Poppins", sans-serif;
     font-weight: 400;
+    margin-bottom: 0.5rem;
 }
 
 .exit {
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     cursor: pointer;
+    margin-bottom: 0.5rem;
 }
 
 .checkout {
@@ -45,4 +48,45 @@
     font-family: "Poppins", sans-serif;
     position: absolute;
     bottom: 1rem;
+}
+
+.gear-item {
+    width: 100%;
+    height: 4rem;
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+
+.item {
+    text-align: center;
+    font-family: "Poppins", sans-serif;
+    font-weight: 300;
+    margin: 0;
+}
+
+.bottom {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.preview {
+    height: 4rem;
+}
+
+.name {
+    font-family: "Poppins", sans-serif;
+    font-weight: 300;
+    font-size: 1rem;
+}
+
+.remove {
+    position: absolute;
+    right: 1.2rem;
+    font-weight: 200;
+    cursor: pointer;
+}
+.remove:hover {
+    color: brown;
 }
